Algoritmo de busqueda por profundidad implementado

--- a/Introduccion_IA/busqueda_por_amplitud1.ipynb
+++ b/Introduccion_IA/busqueda_por_amplitud1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -188,51 +188,51 @@
       "escoge:  Ruun\n",
       "-------------\n",
       "frontera:  ['Milos', 'Ghildo', 'Kuart']\n",
-      "explorados:  ['Ruun', 'Nahoi', 'Lanoi']\n",
+      "explorados:  ['Nahoi', 'Lanoi', 'Ruun']\n",
       "escoge:  Milos\n",
       "-------------\n",
       "frontera:  ['Ghildo', 'Kuart', 'Khandon']\n",
-      "explorados:  ['Milos', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "explorados:  ['Milos', 'Nahoi', 'Lanoi', 'Ruun']\n",
       "escoge:  Ghildo\n",
       "-------------\n",
       "frontera:  ['Kuart', 'Khandon', 'Nokshos']\n",
-      "explorados:  ['Milos', 'Nahoi', 'Ruun', 'Lanoi', 'Ghildo']\n",
+      "explorados:  ['Lanoi', 'Milos', 'Ghildo', 'Nahoi', 'Ruun']\n",
       "escoge:  Kuart\n",
       "-------------\n",
       "frontera:  ['Khandon', 'Nokshos', 'Boomon']\n",
-      "explorados:  ['Milos', 'Nahoi', 'Kuart', 'Ruun', 'Lanoi', 'Ghildo']\n",
+      "explorados:  ['Kuart', 'Lanoi', 'Milos', 'Ghildo', 'Nahoi', 'Ruun']\n",
       "escoge:  Khandon\n",
       "-------------\n",
       "frontera:  ['Nokshos', 'Boomon']\n",
-      "explorados:  ['Milos', 'Nahoi', 'Kuart', 'Ruun', 'Khandon', 'Lanoi', 'Ghildo']\n",
+      "explorados:  ['Kuart', 'Lanoi', 'Milos', 'Ghildo', 'Khandon', 'Nahoi', 'Ruun']\n",
       "escoge:  Nokshos\n",
       "-------------\n",
       "frontera:  ['Boomon', 'Pharis', 'Shiphos']\n",
-      "explorados:  ['Milos', 'Nokshos', 'Nahoi', 'Kuart', 'Ruun', 'Khandon', 'Lanoi', 'Ghildo']\n",
+      "explorados:  ['Kuart', 'Lanoi', 'Milos', 'Ghildo', 'Khandon', 'Nokshos', 'Nahoi', 'Ruun']\n",
       "escoge:  Boomon\n",
       "-------------\n",
       "frontera:  ['Pharis', 'Shiphos', 'Goorum']\n",
-      "explorados:  ['Milos', 'Nokshos', 'Nahoi', 'Kuart', 'Ruun', 'Khandon', 'Lanoi', 'Boomon', 'Ghildo']\n",
+      "explorados:  ['Kuart', 'Lanoi', 'Milos', 'Boomon', 'Ghildo', 'Khandon', 'Nokshos', 'Nahoi', 'Ruun']\n",
       "escoge:  Pharis\n",
       "-------------\n",
       "frontera:  ['Shiphos', 'Goorum', 'Khamin']\n",
-      "explorados:  ['Milos', 'Nokshos', 'Nahoi', 'Kuart', 'Ruun', 'Khandon', 'Lanoi', 'Pharis', 'Boomon', 'Ghildo']\n",
+      "explorados:  ['Kuart', 'Lanoi', 'Milos', 'Boomon', 'Ghildo', 'Khandon', 'Nokshos', 'Nahoi', 'Ruun', 'Pharis']\n",
       "escoge:  Shiphos\n",
       "-------------\n",
       "frontera:  ['Goorum', 'Khamin']\n",
-      "explorados:  ['Milos', 'Nokshos', 'Nahoi', 'Kuart', 'Ruun', 'Shiphos', 'Khandon', 'Lanoi', 'Pharis', 'Boomon', 'Ghildo']\n",
+      "explorados:  ['Shiphos', 'Kuart', 'Lanoi', 'Milos', 'Boomon', 'Ghildo', 'Khandon', 'Nokshos', 'Nahoi', 'Ruun', 'Pharis']\n",
       "escoge:  Goorum\n",
       "-------------\n",
       "frontera:  ['Khamin']\n",
-      "explorados:  ['Milos', 'Nokshos', 'Nahoi', 'Goorum', 'Kuart', 'Ruun', 'Shiphos', 'Khandon', 'Lanoi', 'Pharis', 'Boomon', 'Ghildo']\n",
+      "explorados:  ['Goorum', 'Shiphos', 'Kuart', 'Lanoi', 'Milos', 'Boomon', 'Ghildo', 'Khandon', 'Nokshos', 'Nahoi', 'Ruun', 'Pharis']\n",
       "escoge:  Khamin\n",
       "-------------\n",
       "frontera:  ['Tawa', 'Roria']\n",
-      "explorados:  ['Milos', 'Nokshos', 'Nahoi', 'Goorum', 'Kuart', 'Ruun', 'Shiphos', 'Khandon', 'Lanoi', 'Pharis', 'Khamin', 'Boomon', 'Ghildo']\n",
+      "explorados:  ['Goorum', 'Shiphos', 'Kuart', 'Lanoi', 'Milos', 'Khamin', 'Boomon', 'Ghildo', 'Khandon', 'Nokshos', 'Nahoi', 'Ruun', 'Pharis']\n",
       "escoge:  Tawa\n",
       "-------------\n",
       "frontera:  ['Roria', 'Tarios', 'Theer']\n",
-      "explorados:  ['Milos', 'Nokshos', 'Tawa', 'Nahoi', 'Goorum', 'Kuart', 'Ruun', 'Shiphos', 'Khandon', 'Lanoi', 'Pharis', 'Khamin', 'Boomon', 'Ghildo']\n",
+      "explorados:  ['Goorum', 'Shiphos', 'Kuart', 'Tawa', 'Lanoi', 'Milos', 'Khamin', 'Boomon', 'Ghildo', 'Khandon', 'Nokshos', 'Nahoi', 'Ruun', 'Pharis']\n",
       "escoge:  Roria\n",
       "-------------\n",
       "Estado: Kosos\n",
