--- a/Introduccion_IA/busqueda_por_profundidad.ipynb
+++ b/Introduccion_IA/busqueda_por_profundidad.ipynb
@@ -2,66 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from grafos import Accion\n",
-    "from grafos import Estado\n",
-    "from grafos import Nodo\n",
-    "from grafos import Problema"
+    "from grafos import Accion, Estado, Problema, Nodo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construir la función de ejecución del problema"
+    "Crear métodos auxiliares"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def amplitud(problema):\n",
-    "    raiz = crear_nodo_raiz(problema)\n",
-    "    if problema.es_objetivo(raiz.estado):\n",
-    "        return raiz\n",
-    "    frontera = [raiz,]\n",
-    "    explorados = set()\n",
-    "    while True:\n",
-    "        print('frontera: ', [nodo.estado.nombre for nodo in frontera])\n",
-    "        print('explorados: ', [estado.nombre for estado in explorados])\n",
-    "        if not frontera:\n",
-    "            return None\n",
-    "        nodo = frontera.pop(0)\n",
-    "        print('escoge: ', nodo.estado.nombre)\n",
-    "        print('-----------')\n",
-    "        explorados.add(nodo.estado)\n",
-    "        if not nodo.acciones:\n",
-    "            continue\n",
-    "        for nombre_accion in nodo.acciones.keys():\n",
-    "            accion = Accion(nombre_accion)\n",
-    "            hijo = crea_nodo_hijo(problema, nodo, accion)\n",
-    "            estados_frontera = [nodo.estado for nodo in frontera]\n",
-    "            if (hijo.estado not in explorados and hijo.estado not in estados_frontera):\n",
-    "                if problema.es_objetivo(hijo.estado):\n",
-    "                    return hijo\n",
-    "                frontera.append(hijo)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Métodos auxiliares"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +30,7 @@
     "    raiz = Nodo(estado_raiz, None, acciones_raiz, None)\n",
     "    return raiz\n",
     "\n",
-    "def crea_nodo_hijo(problema, padre, accion):\n",
+    "def crear_nodo_hijo(problema, padre, accion):\n",
     "    nuevo_estado = problema.resultado(padre.estado, accion)\n",
     "    acciones_nuevo = {}\n",
     "    if nuevo_estado.nombre in problema.acciones.keys():\n",
@@ -84,14 +41,14 @@
     "\n",
     "def muestra_solucion(objetivo = None):\n",
     "    if not objetivo:\n",
-    "        print('No hay solución')\n",
+    "        print(\"No hay solucion\")\n",
     "        return\n",
     "    nodo = objetivo\n",
     "    while nodo:\n",
     "        msg = \"Estado: {0}\"\n",
     "        print(msg.format(nodo.estado.nombre))\n",
     "        if nodo.accion:\n",
-    "            msg = \"<--- {0} --->\"\n",
+    "            msg = \"<----{0}---->\"\n",
     "            print(msg.format(nodo.accion.nombre))\n",
     "        nodo = nodo.padre"
    ]
@@ -100,12 +57,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Crear la estructura de datos"
+    "Crear la función que ejecuta el problema"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def profundidad(problema):\n",
+    "    raiz = crear_nodo_raiz(problema)\n",
+    "    if problema.es_objetivo(raiz.estado):\n",
+    "        return raiz\n",
+    "    frontera = [raiz,]\n",
+    "    explorados = set()\n",
+    "    while True:\n",
+    "        print(\"frontera: \", [nodo.estado.nombre for nodo in frontera])\n",
+    "        print(\"explorados: \", [estado.nombre for estado in explorados])\n",
+    "        if not frontera:\n",
+    "            return None\n",
+    "        nodo = frontera.pop()\n",
+    "        print(\"escoge: \", nodo.estado.nombre)\n",
+    "        print(\"-------------\")\n",
+    "        explorados.add(nodo.estado)\n",
+    "        if not nodo.acciones:\n",
+    "            continue\n",
+    "        for nombre_accion in nodo.acciones.keys():\n",
+    "            accion = Accion(nombre_accion)\n",
+    "            hijo = crear_nodo_hijo(problema, nodo, accion)\n",
+    "            estados_frontera = [nodo.estado for nodo in frontera]\n",
+    "            if(hijo.estado not in explorados and hijo.estado not in estados_frontera):\n",
+    "                if problema.es_objetivo(hijo.estado):\n",
+    "                    return hijo\n",
+    "                frontera.append(hijo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear la estructura de datos del problema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +156,7 @@
     "                'Roria':{'NO':theer, 'SO':tarios, 'E':kosos},\n",
     "                'Kosos':{'O':roria}}\n",
     "    \n",
-    "    objetivo_1 = [kosos]\n",
+    "    objetivo_1 = [nokshos]\n",
     "    problema_1 = Problema(lanoi, objetivo_1, acciones)\n",
     "\n",
     "    objetivo_2 = [goorum]\n",
@@ -171,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -181,86 +178,60 @@
       "frontera:  ['Lanoi']\n",
       "explorados:  []\n",
       "escoge:  Lanoi\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Nahoi']\n",
       "explorados:  ['Lanoi']\n",
       "escoge:  Nahoi\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Ruun', 'Milos']\n",
       "explorados:  ['Lanoi', 'Nahoi']\n",
-      "escoge:  Ruun\n",
-      "-----------\n",
-      "frontera:  ['Milos', 'Ghildo', 'Kuart']\n",
-      "explorados:  ['Ruun', 'Lanoi', 'Nahoi']\n",
       "escoge:  Milos\n",
-      "-----------\n",
-      "frontera:  ['Ghildo', 'Kuart', 'Khandon']\n",
-      "explorados:  ['Ruun', 'Lanoi', 'Nahoi', 'Milos']\n",
-      "escoge:  Ghildo\n",
-      "-----------\n",
-      "frontera:  ['Kuart', 'Khandon', 'Nokshos']\n",
-      "explorados:  ['Milos', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
-      "escoge:  Kuart\n",
-      "-----------\n",
-      "frontera:  ['Khandon', 'Nokshos', 'Boomon']\n",
-      "explorados:  ['Kuart', 'Milos', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Ruun', 'Khandon']\n",
+      "explorados:  ['Milos', 'Lanoi', 'Nahoi']\n",
       "escoge:  Khandon\n",
-      "-----------\n",
-      "frontera:  ['Nokshos', 'Boomon']\n",
-      "explorados:  ['Kuart', 'Milos', 'Khandon', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
-      "escoge:  Nokshos\n",
-      "-----------\n",
-      "frontera:  ['Boomon', 'Pharis', 'Shiphos']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Ruun']\n",
+      "explorados:  ['Milos', 'Khandon', 'Lanoi', 'Nahoi']\n",
+      "escoge:  Ruun\n",
+      "-------------\n",
+      "frontera:  ['Ghildo', 'Kuart']\n",
+      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Khandon', 'Nahoi']\n",
+      "escoge:  Kuart\n",
+      "-------------\n",
+      "frontera:  ['Ghildo', 'Boomon']\n",
+      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Kuart', 'Khandon', 'Nahoi']\n",
       "escoge:  Boomon\n",
-      "-----------\n",
-      "frontera:  ['Pharis', 'Shiphos', 'Goorum']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Boomon', 'Ruun', 'Nahoi', 'Lanoi']\n",
-      "escoge:  Pharis\n",
-      "-----------\n",
-      "frontera:  ['Shiphos', 'Goorum', 'Khamin']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Boomon', 'Ruun', 'Nahoi', 'Lanoi']\n",
-      "escoge:  Shiphos\n",
-      "-----------\n",
-      "frontera:  ['Goorum', 'Khamin']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Ghildo', 'Goorum']\n",
+      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Kuart', 'Khandon', 'Boomon', 'Nahoi']\n",
       "escoge:  Goorum\n",
-      "-----------\n",
-      "frontera:  ['Khamin']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Goorum', 'Ruun', 'Nahoi', 'Lanoi']\n",
-      "escoge:  Khamin\n",
-      "-----------\n",
-      "frontera:  ['Tawa', 'Roria']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Goorum', 'Ruun', 'Nahoi', 'Khamin', 'Lanoi']\n",
-      "escoge:  Tawa\n",
-      "-----------\n",
-      "frontera:  ['Roria', 'Tarios', 'Theer']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Goorum', 'Tawa', 'Ruun', 'Nahoi', 'Khamin', 'Lanoi']\n",
-      "escoge:  Roria\n",
-      "-----------\n",
-      "Estado: Kosos\n",
-      "<--- E --->\n",
-      "Estado: Roria\n",
-      "<--- NE --->\n",
-      "Estado: Khamin\n",
-      "<--- NO --->\n",
-      "Estado: Pharis\n",
-      "<--- NO --->\n",
+      "-------------\n",
+      "frontera:  ['Ghildo', 'Shiphos']\n",
+      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Kuart', 'Goorum', 'Khandon', 'Boomon', 'Nahoi']\n",
+      "escoge:  Shiphos\n",
+      "-------------\n",
       "Estado: Nokshos\n",
-      "<--- N --->\n",
-      "Estado: Ghildo\n",
-      "<--- NO --->\n",
+      "<----O---->\n",
+      "Estado: Shiphos\n",
+      "<----O---->\n",
+      "Estado: Goorum\n",
+      "<----N---->\n",
+      "Estado: Boomon\n",
+      "<----NE---->\n",
+      "Estado: Kuart\n",
+      "<----NE---->\n",
       "Estado: Ruun\n",
-      "<--- NO --->\n",
+      "<----NO---->\n",
       "Estado: Nahoi\n",
-      "<--- NE --->\n",
+      "<----NE---->\n",
       "Estado: Lanoi\n"
      ]
     }
    ],
    "source": [
     "problema_resolver = problema_1\n",
-    "solucion = amplitud(problema_resolver)\n",
+    "solucion = profundidad(problema_resolver)\n",
     "muestra_solucion(solucion)"
    ]
   },
