Metodos de busqueda implementados

--- a/Introduccion_IA/busqueda_por_profundidad.ipynb
+++ b/Introduccion_IA/busqueda_por_profundidad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
     "                'Khamin':{'SE':pharis, 'NO':tawa, 'NE':roria},\n",
     "                'Tarios':{'O':khamin, 'NO':tawa, 'NE':roria, 'E':peranna},\n",
     "                'Peranna':{'O':tarios, 'E':khandon},\n",
-    "                'Khadan':{'O':peranna, 'S':milos},\n",
+    "                'Khandon':{'O':peranna, 'S':milos},\n",
     "                'Tawa':{'SO':khamin, 'SE':tarios, 'NE':theer},\n",
     "                'Theer':{'SO':tawa, 'SE':roria},\n",
     "                'Roria':{'NO':theer, 'SO':tarios, 'E':kosos},\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -184,45 +184,59 @@
       "escoge:  Nahoi\n",
       "-------------\n",
       "frontera:  ['Ruun', 'Milos']\n",
-      "explorados:  ['Lanoi', 'Nahoi']\n",
+      "explorados:  ['Nahoi', 'Lanoi']\n",
       "escoge:  Milos\n",
       "-------------\n",
       "frontera:  ['Ruun', 'Khandon']\n",
-      "explorados:  ['Milos', 'Lanoi', 'Nahoi']\n",
+      "explorados:  ['Nahoi', 'Lanoi', 'Milos']\n",
       "escoge:  Khandon\n",
       "-------------\n",
-      "frontera:  ['Ruun']\n",
-      "explorados:  ['Milos', 'Khandon', 'Lanoi', 'Nahoi']\n",
-      "escoge:  Ruun\n",
+      "frontera:  ['Ruun', 'Peranna']\n",
+      "explorados:  ['Nahoi', 'Khandon', 'Lanoi', 'Milos']\n",
+      "escoge:  Peranna\n",
       "-------------\n",
-      "frontera:  ['Ghildo', 'Kuart']\n",
-      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Khandon', 'Nahoi']\n",
-      "escoge:  Kuart\n",
+      "frontera:  ['Ruun', 'Tarios']\n",
+      "explorados:  ['Peranna', 'Nahoi', 'Milos', 'Khandon', 'Lanoi']\n",
+      "escoge:  Tarios\n",
       "-------------\n",
-      "frontera:  ['Ghildo', 'Boomon']\n",
-      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Kuart', 'Khandon', 'Nahoi']\n",
-      "escoge:  Boomon\n",
+      "frontera:  ['Ruun', 'Khamin', 'Tawa', 'Roria']\n",
+      "explorados:  ['Tarios', 'Peranna', 'Nahoi', 'Milos', 'Khandon', 'Lanoi']\n",
+      "escoge:  Roria\n",
       "-------------\n",
-      "frontera:  ['Ghildo', 'Goorum']\n",
-      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Kuart', 'Khandon', 'Boomon', 'Nahoi']\n",
-      "escoge:  Goorum\n",
+      "frontera:  ['Ruun', 'Khamin', 'Tawa', 'Theer', 'Kosos']\n",
+      "explorados:  ['Tarios', 'Peranna', 'Nahoi', 'Roria', 'Milos', 'Khandon', 'Lanoi']\n",
+      "escoge:  Kosos\n",
       "-------------\n",
-      "frontera:  ['Ghildo', 'Shiphos']\n",
-      "explorados:  ['Milos', 'Ruun', 'Lanoi', 'Kuart', 'Goorum', 'Khandon', 'Boomon', 'Nahoi']\n",
-      "escoge:  Shiphos\n",
+      "frontera:  ['Ruun', 'Khamin', 'Tawa', 'Theer']\n",
+      "explorados:  ['Kosos', 'Tarios', 'Peranna', 'Nahoi', 'Roria', 'Milos', 'Khandon', 'Lanoi']\n",
+      "escoge:  Theer\n",
+      "-------------\n",
+      "frontera:  ['Ruun', 'Khamin', 'Tawa']\n",
+      "explorados:  ['Kosos', 'Tarios', 'Peranna', 'Nahoi', 'Roria', 'Milos', 'Khandon', 'Lanoi', 'Theer']\n",
+      "escoge:  Tawa\n",
+      "-------------\n",
+      "frontera:  ['Ruun', 'Khamin']\n",
+      "explorados:  ['Kosos', 'Tarios', 'Peranna', 'Nahoi', 'Roria', 'Milos', 'Tawa', 'Khandon', 'Lanoi', 'Theer']\n",
+      "escoge:  Khamin\n",
+      "-------------\n",
+      "frontera:  ['Ruun', 'Pharis']\n",
+      "explorados:  ['Kosos', 'Tarios', 'Peranna', 'Nahoi', 'Roria', 'Milos', 'Tawa', 'Khandon', 'Khamin', 'Lanoi', 'Theer']\n",
+      "escoge:  Pharis\n",
       "-------------\n",
       "Estado: Nokshos\n",
+      "<----SO---->\n",
+      "Estado: Pharis\n",
+      "<----SE---->\n",
+      "Estado: Khamin\n",
       "<----O---->\n",
-      "Estado: Shiphos\n",
+      "Estado: Tarios\n",
       "<----O---->\n",
-      "Estado: Goorum\n",
+      "Estado: Peranna\n",
+      "<----O---->\n",
+      "Estado: Khandon\n",
       "<----N---->\n",
-      "Estado: Boomon\n",
+      "Estado: Milos\n",
       "<----NE---->\n",
-      "Estado: Kuart\n",
-      "<----NE---->\n",
-      "Estado: Ruun\n",
-      "<----NO---->\n",
       "Estado: Nahoi\n",
       "<----NE---->\n",
       "Estado: Lanoi\n"
