--- a/Introduccion_IA/busqueda_por_amplitud.ipynb
+++ b/Introduccion_IA/busqueda_por_amplitud.ipynb
@@ -2,66 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from grafos import Accion\n",
-    "from grafos import Estado\n",
-    "from grafos import Nodo\n",
-    "from grafos import Problema"
+    "from grafos import Accion, Estado, Problema, Nodo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construir la función de ejecución del problema"
+    "Crear métodos auxiliares"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def amplitud(problema):\n",
-    "    raiz = crear_nodo_raiz(problema)\n",
-    "    if problema.es_objetivo(raiz.estado):\n",
-    "        return raiz\n",
-    "    frontera = [raiz,]\n",
-    "    explorados = set()\n",
-    "    while True:\n",
-    "        print('frontera: ', [nodo.estado.nombre for nodo in frontera])\n",
-    "        print('explorados: ', [estado.nombre for estado in explorados])\n",
-    "        if not frontera:\n",
-    "            return None\n",
-    "        nodo = frontera.pop(0)\n",
-    "        print('escoge: ', nodo.estado.nombre)\n",
-    "        print('-----------')\n",
-    "        explorados.add(nodo.estado)\n",
-    "        if not nodo.acciones:\n",
-    "            continue\n",
-    "        for nombre_accion in nodo.acciones.keys():\n",
-    "            accion = Accion(nombre_accion)\n",
-    "            hijo = crea_nodo_hijo(problema, nodo, accion)\n",
-    "            estados_frontera = [nodo.estado for nodo in frontera]\n",
-    "            if (hijo.estado not in explorados and hijo.estado not in estados_frontera):\n",
-    "                if problema.es_objetivo(hijo.estado):\n",
-    "                    return hijo\n",
-    "                frontera.append(hijo)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Métodos auxiliares"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +30,7 @@
     "    raiz = Nodo(estado_raiz, None, acciones_raiz, None)\n",
     "    return raiz\n",
     "\n",
-    "def crea_nodo_hijo(problema, padre, accion):\n",
+    "def crear_nodo_hijo(problema, padre, accion):\n",
     "    nuevo_estado = problema.resultado(padre.estado, accion)\n",
     "    acciones_nuevo = {}\n",
     "    if nuevo_estado.nombre in problema.acciones.keys():\n",
@@ -84,14 +41,14 @@
     "\n",
     "def muestra_solucion(objetivo = None):\n",
     "    if not objetivo:\n",
-    "        print('No hay solución')\n",
+    "        print(\"No hay solucion\")\n",
     "        return\n",
     "    nodo = objetivo\n",
     "    while nodo:\n",
     "        msg = \"Estado: {0}\"\n",
     "        print(msg.format(nodo.estado.nombre))\n",
     "        if nodo.accion:\n",
-    "            msg = \"<--- {0} --->\"\n",
+    "            msg = \"<----{0}---->\"\n",
     "            print(msg.format(nodo.accion.nombre))\n",
     "        nodo = nodo.padre"
    ]
@@ -100,12 +57,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Crear la estructura de datos"
+    "Crear la función que ejecuta el problema"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def amplitud(problema):\n",
+    "    raiz = crear_nodo_raiz(problema)\n",
+    "    if problema.es_objetivo(raiz.estado):\n",
+    "        return raiz\n",
+    "    frontera = [raiz,]\n",
+    "    explorados = set()\n",
+    "    while True:\n",
+    "        print(\"frontera: \", [nodo.estado.nombre for nodo in frontera])\n",
+    "        print(\"explorados: \", [estado.nombre for estado in explorados])\n",
+    "        if not frontera:\n",
+    "            return None\n",
+    "        nodo = frontera.pop(0)\n",
+    "        print(\"escoge: \", nodo.estado.nombre)\n",
+    "        print(\"-------------\")\n",
+    "        explorados.add(nodo.estado)\n",
+    "        if not nodo.acciones:\n",
+    "            continue\n",
+    "        for nombre_accion in nodo.acciones.keys():\n",
+    "            accion = Accion(nombre_accion)\n",
+    "            hijo = crear_nodo_hijo(problema, nodo, accion)\n",
+    "            estados_frontera = [nodo.estado for nodo in frontera]\n",
+    "            if(hijo.estado not in explorados and hijo.estado not in estados_frontera):\n",
+    "                if problema.es_objetivo(hijo.estado):\n",
+    "                    return hijo\n",
+    "                frontera.append(hijo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear la estructura de datos del problema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +150,7 @@
     "                'Khamin':{'SE':pharis, 'NO':tawa, 'NE':roria},\n",
     "                'Tarios':{'O':khamin, 'NO':tawa, 'NE':roria, 'E':peranna},\n",
     "                'Peranna':{'O':tarios, 'E':khandon},\n",
-    "                'Khadan':{'O':peranna, 'S':milos},\n",
+    "                'Khandon':{'O':peranna, 'S':milos},\n",
     "                'Tawa':{'SO':khamin, 'SE':tarios, 'NE':theer},\n",
     "                'Theer':{'SO':tawa, 'SE':roria},\n",
     "                'Roria':{'NO':theer, 'SO':tarios, 'E':kosos},\n",
@@ -171,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,79 +178,85 @@
       "frontera:  ['Lanoi']\n",
       "explorados:  []\n",
       "escoge:  Lanoi\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Nahoi']\n",
       "explorados:  ['Lanoi']\n",
       "escoge:  Nahoi\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Ruun', 'Milos']\n",
-      "explorados:  ['Lanoi', 'Nahoi']\n",
+      "explorados:  ['Nahoi', 'Lanoi']\n",
       "escoge:  Ruun\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Milos', 'Ghildo', 'Kuart']\n",
-      "explorados:  ['Ruun', 'Lanoi', 'Nahoi']\n",
+      "explorados:  ['Nahoi', 'Lanoi', 'Ruun']\n",
       "escoge:  Milos\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Ghildo', 'Kuart', 'Khandon']\n",
-      "explorados:  ['Ruun', 'Lanoi', 'Nahoi', 'Milos']\n",
+      "explorados:  ['Nahoi', 'Lanoi', 'Ruun', 'Milos']\n",
       "escoge:  Ghildo\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Kuart', 'Khandon', 'Nokshos']\n",
-      "explorados:  ['Milos', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Lanoi']\n",
       "escoge:  Kuart\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Khandon', 'Nokshos', 'Boomon']\n",
-      "explorados:  ['Kuart', 'Milos', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Lanoi']\n",
       "escoge:  Khandon\n",
-      "-----------\n",
-      "frontera:  ['Nokshos', 'Boomon']\n",
-      "explorados:  ['Kuart', 'Milos', 'Khandon', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Nokshos', 'Boomon', 'Peranna']\n",
+      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Khandon', 'Lanoi']\n",
       "escoge:  Nokshos\n",
-      "-----------\n",
-      "frontera:  ['Boomon', 'Pharis', 'Shiphos']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Boomon', 'Peranna', 'Pharis', 'Shiphos']\n",
+      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Khandon', 'Lanoi', 'Nokshos']\n",
       "escoge:  Boomon\n",
-      "-----------\n",
-      "frontera:  ['Pharis', 'Shiphos', 'Goorum']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Boomon', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Peranna', 'Pharis', 'Shiphos', 'Goorum']\n",
+      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Khandon', 'Lanoi', 'Nokshos']\n",
+      "escoge:  Peranna\n",
+      "-------------\n",
+      "frontera:  ['Pharis', 'Shiphos', 'Goorum', 'Tarios']\n",
+      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Khandon', 'Lanoi', 'Nokshos']\n",
       "escoge:  Pharis\n",
-      "-----------\n",
-      "frontera:  ['Shiphos', 'Goorum', 'Khamin']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Boomon', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Shiphos', 'Goorum', 'Tarios', 'Khamin']\n",
+      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Khandon', 'Lanoi', 'Nokshos']\n",
       "escoge:  Shiphos\n",
-      "-----------\n",
-      "frontera:  ['Goorum', 'Khamin']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Goorum', 'Tarios', 'Khamin']\n",
+      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
       "escoge:  Goorum\n",
-      "-----------\n",
-      "frontera:  ['Khamin']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Goorum', 'Ruun', 'Nahoi', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Tarios', 'Khamin']\n",
+      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
+      "escoge:  Tarios\n",
+      "-------------\n",
+      "frontera:  ['Khamin', 'Tawa', 'Roria']\n",
+      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Tarios', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
       "escoge:  Khamin\n",
-      "-----------\n",
+      "-------------\n",
       "frontera:  ['Tawa', 'Roria']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Goorum', 'Ruun', 'Nahoi', 'Khamin', 'Lanoi']\n",
+      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Khamin', 'Ghildo', 'Tarios', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
       "escoge:  Tawa\n",
-      "-----------\n",
-      "frontera:  ['Roria', 'Tarios', 'Theer']\n",
-      "explorados:  ['Kuart', 'Milos', 'Nokshos', 'Khandon', 'Ghildo', 'Pharis', 'Shiphos', 'Boomon', 'Goorum', 'Tawa', 'Ruun', 'Nahoi', 'Khamin', 'Lanoi']\n",
+      "-------------\n",
+      "frontera:  ['Roria', 'Theer']\n",
+      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Khamin', 'Ghildo', 'Tarios', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Tawa', 'Nokshos']\n",
       "escoge:  Roria\n",
-      "-----------\n",
+      "-------------\n",
       "Estado: Kosos\n",
-      "<--- E --->\n",
+      "<----E---->\n",
       "Estado: Roria\n",
-      "<--- NE --->\n",
-      "Estado: Khamin\n",
-      "<--- NO --->\n",
-      "Estado: Pharis\n",
-      "<--- NO --->\n",
-      "Estado: Nokshos\n",
-      "<--- N --->\n",
-      "Estado: Ghildo\n",
-      "<--- NO --->\n",
-      "Estado: Ruun\n",
-      "<--- NO --->\n",
+      "<----NE---->\n",
+      "Estado: Tarios\n",
+      "<----O---->\n",
+      "Estado: Peranna\n",
+      "<----O---->\n",
+      "Estado: Khandon\n",
+      "<----N---->\n",
+      "Estado: Milos\n",
+      "<----NE---->\n",
       "Estado: Nahoi\n",
-      "<--- NE --->\n",
+      "<----NE---->\n",
       "Estado: Lanoi\n"
      ]
     }
@@ -263,13 +266,6 @@
     "solucion = amplitud(problema_resolver)\n",
     "muestra_solucion(solucion)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
