Ejercicio de busqueda implementado, inicio de implementacion de ejercicio evolutivo

--- a/Introduccion_IA/busqueda_a_estrella.ipynb
+++ b/Introduccion_IA/busqueda_a_estrella.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,6 @@
     "    hijo.heuristicas = problema.heuristicas[hijo.estado.nombre]\n",
     "    hijo.valores = {estado: heuristica + hijo.costo for estado, heuristica in hijo.heuristicas.items()}\n",
     "    if agregar:\n",
-    "        hijo.padre = padre\n",
     "        padre.hijos.append(hijo)\n",
     "    return hijo\n",
     "\n",
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,61 +567,58 @@
     "                             'Theer': 96,\n",
     "                             'Roria': 87,\n",
     "                             'Kosos': 0}}\n",
+    "\n",
     "    \n",
-    "    objetivo_1 = [kosos]\n",
+    "    objetivo_1 = [roria]\n",
     "    problema_1 = Problema(lanoi, objetivo_1, acciones, costos, heuristicas)\n",
     "\n",
     "    objetivo_2 = [goorum]\n",
-    "    problema_2 = Problema(lanoi, objetivo_2, acciones, costos)\n",
+    "    problema_2 = Problema(lanoi, objetivo_2, acciones, costos, heuristicas)\n",
     "\n",
     "    objetivo_3 = [boomon, goorum]\n",
-    "    problema_3 = Problema(lanoi, objetivo_3, acciones, costos)"
+    "    problema_3 = Problema(lanoi, objetivo_3, acciones, costos, heuristicas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estado Kosos, Valor 404\n",
-      "  Costo: 404\n",
-      "  Heurística: 0\n",
-      "<--- E [104] ---\n",
-      "Estado Roria, Valor 387\n",
+      "Estado Roria, Valor 300\n",
       "  Costo: 300\n",
-      "  Heurística: 87\n",
+      "  Heurística: 0\n",
       "<--- NE [98] ---\n",
-      "Estado Khamin, Valor 384\n",
+      "Estado Khamin, Valor 299\n",
       "  Costo: 202\n",
-      "  Heurística: 182\n",
+      "  Heurística: 97\n",
       "<--- NO [29] ---\n",
-      "Estado Pharis, Valor 359\n",
+      "Estado Pharis, Valor 278\n",
       "  Costo: 173\n",
-      "  Heurística: 186\n",
+      "  Heurística: 105\n",
       "<--- NO [5] ---\n",
-      "Estado Nokshos, Valor 357\n",
+      "Estado Nokshos, Valor 277\n",
       "  Costo: 168\n",
-      "  Heurística: 189\n",
+      "  Heurística: 109\n",
       "<--- N [17] ---\n",
-      "Estado Ghildo, Valor 362\n",
+      "Estado Ghildo, Valor 287\n",
       "  Costo: 151\n",
-      "  Heurística: 211\n",
+      "  Heurística: 136\n",
       "<--- NO [88] ---\n",
-      "Estado Ruun, Valor 242\n",
+      "Estado Ruun, Valor 194\n",
       "  Costo: 63\n",
-      "  Heurística: 179\n",
+      "  Heurística: 131\n",
       "<--- NO [21] ---\n",
-      "Estado Nahoi, Valor 233\n",
+      "Estado Nahoi, Valor 185\n",
       "  Costo: 42\n",
-      "  Heurística: 191\n",
+      "  Heurística: 143\n",
       "<--- NE [42] ---\n",
-      "Estado Lanoi, Valor 224\n",
+      "Estado Lanoi, Valor 174\n",
       "  Costo: 0\n",
-      "  Heurística: 224\n"
+      "  Heurística: 174\n"
      ]
     }
    ],
