--- a/Introduccion_IA/busqueda_ciudades_colombia.ipynb
+++ b/Introduccion_IA/busqueda_ciudades_colombia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crea_nodo_raiz(problema):\n",
+    "    estado_raiz = problema.estado_inicial\n",
+    "    acciones_raiz = {}\n",
+    "    if estado_raiz.nombre in problema.acciones.keys():\n",
+    "        acciones_raiz = problema.acciones[estado_raiz.nombre]\n",
+    "    raiz = Nodo(estado_raiz, None, acciones_raiz, None)\n",
+    "    raiz.costo = 0\n",
+    "    raiz.heuristicas = problema.heuristicas[estado_raiz.nombre]\n",
+    "    raiz.valores = dict(raiz.heuristicas.items())\n",
+    "    return raiz\n",
+    "\n",
+    "def crea_nodo_hijo(problema, padre, accion, agregar = True):\n",
+    "    nuevo_estado = problema.resultado(padre.estado, accion)\n",
+    "    acciones_nuevo = {}\n",
+    "    if nuevo_estado.nombre in problema.acciones.keys():\n",
+    "        acciones_nuevo = problema.acciones[nuevo_estado.nombre]\n",
+    "    hijo = Nodo(nuevo_estado, accion, acciones_nuevo, padre)\n",
+    "    costo = padre.costo\n",
+    "    costo += problema.costo_accion(padre.estado, accion)\n",
+    "    hijo.costo = costo\n",
+    "    hijo.heuristicas = problema.heuristicas[hijo.estado.nombre]\n",
+    "    hijo.valores = {estado: heuristica - hijo.costo for estado, heuristica in hijo.heuristicas.items()}\n",
+    "    if agregar:\n",
+    "        padre.hijos.append(hijo)\n",
+    "    return hijo\n",
+    "\n",
+    "def sacar_siguiente(frontera, metrica = 'valor', criterio = 'menor', objetivos = None):\n",
+    "    mejor = frontera[0]\n",
+    "    for nodo in frontera[1:]:\n",
+    "        for objetivo in objetivos:\n",
+    "            if metrica == 'valor':\n",
+    "                valor_nodo = nodo.valores[objetivo.nombre]\n",
+    "                valor_mejor = mejor.valores[objetivo.nombre]\n",
+    "                if(criterio == 'menor' and\n",
+    "                   valor_nodo < valor_mejor):\n",
+    "                    mejor = nodo\n",
+    "                elif(criterio == 'mayor' and\n",
+    "                     valor_nodo > valor_mejor):\n",
+    "                    mejor = nodo\n",
+    "            elif metrica == 'heuristica':\n",
+    "                heuristica_nodo = nodo.heuristicas[objetivo.nombre]\n",
+    "                heuristica_mejor = mejor.heuristicas[objetivo.nombre]\n",
+    "                if(criterio == 'menor' and\n",
+    "                   heuristica_nodo < heuristica_mejor):\n",
+    "                    mejor = nodo\n",
+    "                elif(criterio == 'mayor' and\n",
+    "                     heuristica_nodo > heuristica_mejor):\n",
+    "                    mejor = nodo\n",
+    "            elif metrica == 'costo':\n",
+    "                if(criterio == 'menor' and\n",
+    "                   nodo.costo_camino < mejor.costo_camino):\n",
+    "                    mejor = nodo\n",
+    "                elif(criterio == 'mayor' and\n",
+    "                     nodo.costo_camino > mejor.costo_camino):\n",
+    "                    mejor = nodo\n",
+    "    frontera.remove(mejor)\n",
+    "    return mejor\n",
+    "\n",
+    "def muestra_solucion(objetivo = None, problema_resolver = None):\n",
+    "    if not objetivo:\n",
+    "        print(\"No hay solución\")\n",
+    "        return\n",
+    "    nodo = objetivo\n",
+    "    while nodo:\n",
+    "        msg = \"Estado {0}, Valor {1}\"\n",
+    "        estado = nodo.estado.nombre\n",
+    "        valores = [nodo.valores[objetivo.nombre]\n",
+    "                   for objetivo\n",
+    "                   in problema_resolver.estado_objetivo]\n",
+    "        valor = min(valores)\n",
+    "        print(msg.format(estado, valor))\n",
+    "        msg = \"  Costo: {0}\"\n",
+    "        costo_total = nodo.costo\n",
+    "        print(msg.format(costo_total))\n",
+    "        msg = \"  Heurística: {0}\"\n",
+    "        heuristicas_objetivos = [nodo.heuristicas[objetivo.nombre]\n",
+    "                                 for objetivo\n",
+    "                                 in problema_resolver.estado_objetivo]\n",
+    "        heuristica = min(heuristicas_objetivos)\n",
+    "        print(msg.format(heuristica))\n",
+    "        if nodo.accion:\n",
+    "            accion = nodo.accion.nombre\n",
+    "            padre = nodo.padre.estado\n",
+    "            costo = problema_resolver.costo_accion(padre, nodo.accion)\n",
+    "            if accion:\n",
+    "                msg = \"<--- {0} [{1}] ---\"\n",
+    "                print(msg.format(accion, costo))\n",
+    "        nodo = nodo.padre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def a_estrella(problema):\n",
+    "    raiz = crea_nodo_raiz(problema)\n",
+    "    frontera = [raiz, ]\n",
+    "    explorados = set()\n",
+    "    while True:\n",
+    "        if not frontera:\n",
+    "            return None\n",
+    "        nodo = sacar_siguiente(frontera, 'valor',\n",
+    "                               objetivos=problema.estado_objetivo)\n",
+    "        if problema.es_objetivo(nodo.estado):\n",
+    "            return nodo\n",
+    "        explorados.add(nodo.estado)\n",
+    "        if not nodo.acciones:\n",
+    "            continue\n",
+    "        for nombre_accion in nodo.acciones.keys():\n",
+    "            accion = Accion(nombre_accion)\n",
+    "            hijo = crea_nodo_hijo(problema, nodo, accion)\n",
+    "            estados_frontera = [nodo.estado for nodo in frontera]\n",
+    "            if hijo.estado in explorados or hijo.estado in estados_frontera:\n",
+    "                buscar = [nodo for nodo in frontera\n",
+    "                          if nodo.estado == hijo.estado]\n",
+    "                if buscar:\n",
+    "                    valores_hijo = [hijo.valores[objetivo.nombre]\n",
+    "                                    for objetivo\n",
+    "                                    in problema.estado_objetivo]\n",
+    "                    valores_buscar = [buscar[0].valores[objetivo.nombre]\n",
+    "                                      for objetivo\n",
+    "                                      in problema.estado_objetivo]\n",
+    "                    minimo_hijo = min(valores_hijo)\n",
+    "                    minimo_buscar = min(valores_buscar)\n",
+    "                    if minimo_hijo < minimo_buscar:\n",
+    "                        indice = frontera.index(buscar[0])\n",
+    "                        frontera[indice] = hijo\n",
+    "            else:\n",
+    "                frontera.append(hijo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +214,7 @@
     "                \"Santa Fé de Antioquia\": {\"NO\": 103, \"SE\": 56},\n",
     "                \"Dabeiba\": {\"NO\": 109, \"SE\": 103},\n",
     "                \"Chigorodó\": {\"N\": 177, \"SE\": 109},\n",
-    "                \"Arboletes\": {\"E\": monteria, \"S\": 177},\n",
+    "                \"Arboletes\": {\"E\": 120, \"S\": 177},\n",
     "                \"Barbosa\": {\"N\": 99, \"E\": 38, \"SO\": 42},\n",
     "                \"Yarumal\": {\"NE\": 161, \"E\": 157, \"S\": 99},\n",
     "                \"Cisneros\": {\"E\": 48, \"O\": 38},\n",
@@ -83,7 +222,7 @@
     "                \"Maceo\": {\"N\": 83, \"O\": 48},\n",
     "                \"Remedios\": {\"NO\": 148,\"O\": 77, \"S\": 83},\n",
     "                \"Caucasia\": {\"NO\": 70, \"SO\": 161, \"SE\": 148},\n",
-    "                \"Montería\": {\"NE\": 23, \"O\": arboletes, \"SE\": 54},\n",
+    "                \"Montería\": {\"NE\": 23, \"O\": 120, \"SE\": 54},\n",
     "                \"Planeta Rica\": {\"NO\": 54, \"N\": 73, \"SE\": 70},\n",
     "                \"Shagún\": {\"NE\": 48, \"SO\": 34, \"S\": 73},\n",
     "                \"Ciénaga de Oro\": {\"O\": 19, \"NE\": 34},\n",
@@ -91,13 +230,117 @@
     "                \"Coveñas\": {\"SO\": 73, \"NE\": 22},\n",
     "                \"Sincelejo\": {\"NO\": 40, \"SO\": 48},\n",
     "                \"Tolú\": {\"SO\": 22, \"SE\": 40}\n",
-    "                }"
+    "                }\n",
+    "    \n",
+    "    heuristicas = {\"Manizales\": {\"Tolú\": 90},\n",
+    "                \"Medellín\": {\"Tolú\": 90},\n",
+    "                \"Santa Fé de Antioquia\": {\"Tolú\": 40},\n",
+    "                \"Dabeiba\": {\"Tolú\": 70},\n",
+    "                \"Chigorodó\": {\"Tolú\": 90},\n",
+    "                \"Arboletes\": {\"Tolú\": 70},\n",
+    "                \"Barbosa\": {\"Tolú\": 40},\n",
+    "                \"Yarumal\": {\"Tolú\": 40},\n",
+    "                \"Cisneros\": {\"Tolú\": 70},\n",
+    "                \"Amalfi\": {\"Tolú\": 40},\n",
+    "                \"Maceo\": {\"Tolú\": 70},\n",
+    "                \"Remedios\": {\"Tolú\": 90},\n",
+    "                \"Caucasia\": {\"Tolú\": 70},\n",
+    "                \"Montería\": {\"Tolú\": 40},\n",
+    "                \"Planeta Rica\": {\"Tolú\": 90},\n",
+    "                \"Shagún\": {\"Tolú\": 40},\n",
+    "                \"Ciénaga de Oro\": {\"Tolú\": 70},\n",
+    "                \"Cereté\": {\"Tolú\": 40},\n",
+    "                \"Coveñas\": {\"Tolú\": 70},\n",
+    "                \"Sincelejo\": {\"Tolú\": 70},\n",
+    "                \"Tolú\": {\"Tolú\": 0}\n",
+    "                }\n",
+    "    \n",
+    "\n",
+    "    objetivo_1 = [tolu]\n",
+    "    problema_1 = Problema(manizales, objetivo_1, acciones, costos, heuristicas)\n",
+    "\n",
+    "    # objetivo_2 = [goorum]\n",
+    "    # problema_2 = Problema(lanoi, objetivo_2, acciones, costos)\n",
+    "\n",
+    "    # objetivo_3 = [boomon, goorum]\n",
+    "    # problema_3 = Problema(lanoi, objetivo_3, acciones, costos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estado Tolú, Valor -911\n",
+      "  Costo: 911\n",
+      "  Heurística: 0\n",
+      "<--- NE [22] ---\n",
+      "Estado Coveñas, Valor -819\n",
+      "  Costo: 889\n",
+      "  Heurística: 70\n",
+      "<--- NE [73] ---\n",
+      "Estado Cereté, Valor -776\n",
+      "  Costo: 816\n",
+      "  Heurística: 40\n",
+      "<--- NE [23] ---\n",
+      "Estado Montería, Valor -753\n",
+      "  Costo: 793\n",
+      "  Heurística: 40\n",
+      "<--- E [120] ---\n",
+      "Estado Arboletes, Valor -603\n",
+      "  Costo: 673\n",
+      "  Heurística: 70\n",
+      "<--- N [177] ---\n",
+      "Estado Chigorodó, Valor -406\n",
+      "  Costo: 496\n",
+      "  Heurística: 90\n",
+      "<--- NO [109] ---\n",
+      "Estado Dabeiba, Valor -317\n",
+      "  Costo: 387\n",
+      "  Heurística: 70\n",
+      "<--- NO [103] ---\n",
+      "Estado Santa Fé de Antioquia, Valor -244\n",
+      "  Costo: 284\n",
+      "  Heurística: 40\n",
+      "<--- NO [56] ---\n",
+      "Estado Medellín, Valor -138\n",
+      "  Costo: 228\n",
+      "  Heurística: 90\n",
+      "<--- N [228] ---\n",
+      "Estado Manizales, Valor 90\n",
+      "  Costo: 0\n",
+      "  Heurística: 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "problema_resolver = problema_1\n",
+    "solucion = a_estrella(problema_resolver)\n",
+    "muestra_solucion(solucion, problema_resolver)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
