--- a/Introduccion_IA/busqueda_por_amplitud.ipynb
+++ b/Introduccion_IA/busqueda_por_amplitud.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,77 +184,41 @@
       "escoge:  Nahoi\n",
       "-------------\n",
       "frontera:  ['Ruun', 'Milos']\n",
-      "explorados:  ['Nahoi', 'Lanoi']\n",
+      "explorados:  ['Lanoi', 'Nahoi']\n",
       "escoge:  Ruun\n",
       "-------------\n",
       "frontera:  ['Milos', 'Ghildo', 'Kuart']\n",
-      "explorados:  ['Nahoi', 'Lanoi', 'Ruun']\n",
+      "explorados:  ['Lanoi', 'Nahoi', 'Ruun']\n",
       "escoge:  Milos\n",
       "-------------\n",
       "frontera:  ['Ghildo', 'Kuart', 'Khandon']\n",
-      "explorados:  ['Nahoi', 'Lanoi', 'Ruun', 'Milos']\n",
+      "explorados:  ['Lanoi', 'Nahoi', 'Milos', 'Ruun']\n",
       "escoge:  Ghildo\n",
       "-------------\n",
       "frontera:  ['Kuart', 'Khandon', 'Nokshos']\n",
-      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Lanoi']\n",
+      "explorados:  ['Lanoi', 'Ghildo', 'Milos', 'Ruun', 'Nahoi']\n",
       "escoge:  Kuart\n",
       "-------------\n",
       "frontera:  ['Khandon', 'Nokshos', 'Boomon']\n",
-      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Lanoi']\n",
+      "explorados:  ['Lanoi', 'Ghildo', 'Milos', 'Kuart', 'Ruun', 'Nahoi']\n",
       "escoge:  Khandon\n",
       "-------------\n",
       "frontera:  ['Nokshos', 'Boomon', 'Peranna']\n",
-      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Khandon', 'Lanoi']\n",
+      "explorados:  ['Lanoi', 'Khandon', 'Ghildo', 'Milos', 'Kuart', 'Ruun', 'Nahoi']\n",
       "escoge:  Nokshos\n",
       "-------------\n",
       "frontera:  ['Boomon', 'Peranna', 'Pharis', 'Shiphos']\n",
-      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Khandon', 'Lanoi', 'Nokshos']\n",
+      "explorados:  ['Lanoi', 'Khandon', 'Ghildo', 'Milos', 'Kuart', 'Ruun', 'Nokshos', 'Nahoi']\n",
       "escoge:  Boomon\n",
       "-------------\n",
-      "frontera:  ['Peranna', 'Pharis', 'Shiphos', 'Goorum']\n",
-      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Khandon', 'Lanoi', 'Nokshos']\n",
-      "escoge:  Peranna\n",
-      "-------------\n",
-      "frontera:  ['Pharis', 'Shiphos', 'Goorum', 'Tarios']\n",
-      "explorados:  ['Nahoi', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Khandon', 'Lanoi', 'Nokshos']\n",
-      "escoge:  Pharis\n",
-      "-------------\n",
-      "frontera:  ['Shiphos', 'Goorum', 'Tarios', 'Khamin']\n",
-      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Khandon', 'Lanoi', 'Nokshos']\n",
-      "escoge:  Shiphos\n",
-      "-------------\n",
-      "frontera:  ['Goorum', 'Tarios', 'Khamin']\n",
-      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
-      "escoge:  Goorum\n",
-      "-------------\n",
-      "frontera:  ['Tarios', 'Khamin']\n",
-      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
-      "escoge:  Tarios\n",
-      "-------------\n",
-      "frontera:  ['Khamin', 'Tawa', 'Roria']\n",
-      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Ghildo', 'Tarios', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
-      "escoge:  Khamin\n",
-      "-------------\n",
-      "frontera:  ['Tawa', 'Roria']\n",
-      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Khamin', 'Ghildo', 'Tarios', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Nokshos']\n",
-      "escoge:  Tawa\n",
-      "-------------\n",
-      "frontera:  ['Roria', 'Theer']\n",
-      "explorados:  ['Nahoi', 'Pharis', 'Ruun', 'Milos', 'Khamin', 'Ghildo', 'Tarios', 'Kuart', 'Boomon', 'Peranna', 'Goorum', 'Khandon', 'Shiphos', 'Lanoi', 'Tawa', 'Nokshos']\n",
-      "escoge:  Roria\n",
-      "-------------\n",
-      "Estado: Kosos\n",
-      "<----E---->\n",
-      "Estado: Roria\n",
-      "<----NE---->\n",
-      "Estado: Tarios\n",
-      "<----O---->\n",
-      "Estado: Peranna\n",
-      "<----O---->\n",
-      "Estado: Khandon\n",
+      "Estado: Goorum\n",
       "<----N---->\n",
-      "Estado: Milos\n",
+      "Estado: Boomon\n",
       "<----NE---->\n",
+      "Estado: Kuart\n",
+      "<----NE---->\n",
+      "Estado: Ruun\n",
+      "<----NO---->\n",
       "Estado: Nahoi\n",
       "<----NE---->\n",
       "Estado: Lanoi\n"
@@ -262,7 +226,7 @@
     }
    ],
    "source": [
-    "problema_resolver = problema_1\n",
+    "problema_resolver = problema_2\n",
     "solucion = amplitud(problema_resolver)\n",
     "muestra_solucion(solucion)"
    ]
