--- a/Introduccion_IA/sistema_experto.ipynb
+++ b/Introduccion_IA/sistema_experto.ipynb
@@ -2,19 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "sintomas = {\"gripe\": [\"fiebre\", \"dolor de cabeza\", \"tos\"], \"resfriado\": [\"fiebre\", \"dolor de garganta\", \"dolor de cabeza\", \"tos\"], \"amigdalitis\": [\"dolor de garganta\"], \"migraña\": [\"dolor de cabeza\"]}\n",
     "\n",
     "class Sistema_experto:\n",
-    "    def __init__(self, sintomas, consulta) -> None:\n",
+    "    def __init__(self, sintomas, *args) -> None:\n",
     "        self.sintomas = sintomas\n",
-    "        if isinstance(consulta, str):\n",
-    "            self.consulta = list(consulta)\n",
-    "        else:\n",
-    "            self.consulta = consulta\n",
+    "        self.consulta = list(args)\n",
     "\n",
     "    def __str__(self) -> str:\n",
     "        diagnostico = self.diagnostico()\n",
@@ -29,19 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No hay diagnóstico\n"
+      "El diagnóstico es: gripe\n"
      ]
     }
    ],
    "source": [
-    "medico = Sistema_experto(sintomas, \"dolor de garganta\")\n",
+    "medico = Sistema_experto(sintomas, \"fiebre\", \"dolor de cabeza\", \"tos\")\n",
     "print(medico)"
    ]
   }
